# pixel-perfect

./: .gitignore  AGENTS.md  README.md  RENDERING_TEST.md  pyproject.toml
.github/workflows/: ci.yml
copilot-plugin/instructions/: visual-content.instructions.md
copilot-plugin/skills/aifmt/: SKILL.md
docs/: _config.yml  api.md  contributing.md  discovery.md  getting-started.md  index.md  tools.md
src/aifmt/: __init__.py  server.py
src/aifmt/lib/: __init__.py  bar_fixer.py  box_fixer.py  mermaid_validator.py  table_fixer.py  tree_fixer.py  visual_width.py
src/aifmt/tools/: __init__.py
tests/: conftest.py  test_bar_fixer.py  test_box_fixer.py  test_mermaid_validator.py  test_profiles.py  test_real_world.py  test_table_fixer.py  test_tree_fixer.py  test_visual_width.py
